<resources>
    <string name="app_name">MeuAppRevisao</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="meuapp">MeuApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_agree">I agree</string>
</resources>